copy_paste/api-deployment.yaml
---
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api-deployment
spec:
  selector:
    matchLabels:
      components: backend
  replicas: 1
  template:
    metadata:
      labels:
        components: backend
    spec:
      containers:
        - name: conv-api
          image: antonlarichev/conv-api:1.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /opt/app/uploads
              name: conv-api-data
      volumes:
        - name: conv-api-data
          persistentVolumeClaim:
            claimName: conv-api-pvc
