copy_paste/app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-app-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      components: frontend
  template:
    metadata:
      labels:
        components: frontend
    spec:
      containers:
        - name: conv-app
          ports:
            - containerPort: 80
          image: antonlarichev/conv-app:1.2
          resources:
            requests:
              cpu: "250m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
