copy_paste/conv-deployment.yaml
---
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-service-deployment
spec:
  selector:
    matchLabels:
      components: service
  replicas: 1
  template:
    metadata:
      labels:
        components: service
    spec:
      containers:
        - name: conv-api
          image: antonlarichev/conv-service:1.0
          ports:
            - containerPort: 4000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
