copy_paste/rabbitmq-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: rabbitmq
  template:
    metadata:
      labels:
        components: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.8.34-management
          ports:
            - containerPort: 5672
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          volumeMounts:
            - mountPath: /var/lib/rabbitmq
              name: rabbitmq-data
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
