copy_paste/conv-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: conv-service-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 4000
      protocol: TCP
  selector:
    components: service
